// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interactive Mask should render Mask success 1`] = `
<Mask
  onPress={[MockFunction]}
  style={
    Object {
      "color": "red",
    }
  }
>
  <TouchableWithoutFeedback
    onPress={[MockFunction]}
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "flex": 1,
            "zIndex": 1000,
          },
          Object {
            "backgroundColor": "rgba(0,0,0,.6)",
          },
          Object {
            "color": "red",
          },
        ]
      }
    >
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
              "zIndex": 1000,
            },
            Object {
              "backgroundColor": "rgba(0,0,0,.6)",
            },
            Object {
              "color": "red",
            },
          ]
        }
      >
        <TouchableWithoutFeedback>
          <Text
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
            >
              Test
            </Text>
          </Text>
        </TouchableWithoutFeedback>
        <PressabilityDebugView
          color="red"
        />
      </View>
    </View>
  </TouchableWithoutFeedback>
</Mask>
`;

exports[`interactive Popup should render Popup success 1`] = `
<Popup
  onClose={[MockFunction]}
  onShow={[MockFunction]}
  style={
    Object {
      "color": "red",
    }
  }
>
  <Component
    hardwareAccelerated={false}
    onRequestClose={[MockFunction]}
    onShow={[MockFunction]}
    transparent={true}
    visible={false}
  >
    <Modal
      hardwareAccelerated={false}
      onRequestClose={[MockFunction]}
      onShow={[MockFunction]}
      transparent={true}
      visible={false}
    >
      <Mask
        onPress={[MockFunction]}
      >
        <TouchableWithoutFeedback
          onPress={[MockFunction]}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "flex": 1,
                  "zIndex": 1000,
                },
                Object {
                  "backgroundColor": "rgba(0,0,0,.6)",
                },
                undefined,
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "flex": 1,
                    "zIndex": 1000,
                  },
                  Object {
                    "backgroundColor": "rgba(0,0,0,.6)",
                  },
                  undefined,
                ]
              }
            >
              <TouchableWithoutFeedback>
                <ForwardRef(AnimatedComponentWrapper)
                  accessible={true}
                  focusable={false}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#EFEFF4",
                        "bottom": 0,
                        "left": 0,
                        "position": "absolute",
                        "width": 750,
                      },
                      Object {
                        "color": "red",
                      },
                      Object {
                        "transform": Array [
                          Object {
                            "translateY": 1334,
                          },
                        ],
                      },
                    ]
                  }
                >
                  <AnimatedComponent
                    accessible={true}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#EFEFF4",
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "width": 750,
                        },
                        Object {
                          "color": "red",
                        },
                        Object {
                          "transform": Array [
                            Object {
                              "translateY": 1334,
                            },
                          ],
                        },
                      ]
                    }
                  >
                    <View
                      accessible={true}
                      focusable={false}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#EFEFF4",
                          "bottom": 0,
                          "color": "red",
                          "left": 0,
                          "position": "absolute",
                          "transform": Array [
                            Object {
                              "translateY": 1334,
                            },
                          ],
                          "width": 750,
                        }
                      }
                    >
                      <View
                        accessible={true}
                        focusable={false}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#EFEFF4",
                            "bottom": 0,
                            "color": "red",
                            "left": 0,
                            "position": "absolute",
                            "transform": Array [
                              Object {
                                "translateY": 1334,
                              },
                            ],
                            "width": 750,
                          }
                        }
                      >
                        <View
                          onLayout={[Function]}
                        >
                          <View
                            onLayout={[Function]}
                          >
                            <Text>
                              <Text>
                                Test
                              </Text>
                            </Text>
                          </View>
                        </View>
                      </View>
                    </View>
                  </AnimatedComponent>
                </ForwardRef(AnimatedComponentWrapper)>
              </TouchableWithoutFeedback>
              <PressabilityDebugView
                color="red"
              />
            </View>
          </View>
        </TouchableWithoutFeedback>
      </Mask>
    </Modal>
  </Component>
</Popup>
`;

exports[`interactive showActionSheet should render ActionSheet success 1`] = `
<Index
  actions={
    Array [
      Object {
        "label": "取消",
        "onPress": [MockFunction],
        "textStyle": Object {
          "color": "#000000",
        },
        "type": "default",
      },
    ]
  }
  autoDectect={true}
  menus={
    Array [
      Object {
        "label": "选项一",
        "onPress": [MockFunction],
        "textStyle": Object {
          "color": "#000000",
        },
        "type": "default",
      },
      Object {
        "label": "选项二",
        "onPress": [MockFunction],
        "textStyle": Object {
          "color": "#000000",
        },
        "type": "default",
      },
    ]
  }
  onClose={[MockFunction]}
  type="ios"
  visible={false}
>
  <Popup
    onClose={[MockFunction]}
    style={
      Array [
        Object {
          "backgroundColor": "#EFEFF4",
        },
        undefined,
      ]
    }
    visible={false}
  >
    <Component
      hardwareAccelerated={false}
      onRequestClose={[MockFunction]}
      transparent={true}
      visible={false}
    >
      <Modal
        hardwareAccelerated={false}
        onRequestClose={[MockFunction]}
        transparent={true}
        visible={false}
      >
        <Mask
          onPress={[MockFunction]}
        >
          <TouchableWithoutFeedback
            onPress={[MockFunction]}
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "flex": 1,
                    "zIndex": 1000,
                  },
                  Object {
                    "backgroundColor": "rgba(0,0,0,.6)",
                  },
                  undefined,
                ]
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "zIndex": 1000,
                    },
                    Object {
                      "backgroundColor": "rgba(0,0,0,.6)",
                    },
                    undefined,
                  ]
                }
              >
                <TouchableWithoutFeedback>
                  <ForwardRef(AnimatedComponentWrapper)
                    accessible={true}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#EFEFF4",
                          "bottom": 0,
                          "left": 0,
                          "position": "absolute",
                          "width": 750,
                        },
                        Array [
                          Object {
                            "backgroundColor": "#EFEFF4",
                          },
                          undefined,
                        ],
                        Object {
                          "transform": Array [
                            Object {
                              "translateY": 1334,
                            },
                          ],
                        },
                      ]
                    }
                  >
                    <AnimatedComponent
                      accessible={true}
                      focusable={false}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Array [
                          Object {
                            "backgroundColor": "#EFEFF4",
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "width": 750,
                          },
                          Array [
                            Object {
                              "backgroundColor": "#EFEFF4",
                            },
                            undefined,
                          ],
                          Object {
                            "transform": Array [
                              Object {
                                "translateY": 1334,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <View
                        accessible={true}
                        focusable={false}
                        onClick={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Object {
                            "backgroundColor": "#EFEFF4",
                            "bottom": 0,
                            "left": 0,
                            "position": "absolute",
                            "transform": Array [
                              Object {
                                "translateY": 1334,
                              },
                            ],
                            "width": 750,
                          }
                        }
                      >
                        <View
                          accessible={true}
                          focusable={false}
                          onClick={[Function]}
                          onResponderGrant={[Function]}
                          onResponderMove={[Function]}
                          onResponderRelease={[Function]}
                          onResponderTerminate={[Function]}
                          onResponderTerminationRequest={[Function]}
                          onStartShouldSetResponder={[Function]}
                          style={
                            Object {
                              "backgroundColor": "#EFEFF4",
                              "bottom": 0,
                              "left": 0,
                              "position": "absolute",
                              "transform": Array [
                                Object {
                                  "translateY": 1334,
                                },
                              ],
                              "width": 750,
                            }
                          }
                        >
                          <View
                            onLayout={[Function]}
                          >
                            <View
                              onLayout={[Function]}
                            >
                              <View
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#fff",
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "#fff",
                                      },
                                    ]
                                  }
                                >
                                  <ForwardRef
                                    key="0"
                                    onPress={[MockFunction]}
                                    style={
                                      Array [
                                        Object {
                                          "borderColor": "#D9D9D9",
                                          "borderStyle": "solid",
                                          "borderTopWidth": 0.5,
                                        },
                                        Object {
                                          "paddingBottom": 10,
                                          "paddingTop": 10,
                                        },
                                        Object {
                                          "borderTopWidth": 0,
                                        },
                                        undefined,
                                      ]
                                    }
                                    underlayColor="#ECECEC"
                                  >
                                    <TouchableHighlight
                                      hostRef={null}
                                      onPress={[MockFunction]}
                                      style={
                                        Array [
                                          Object {
                                            "borderColor": "#D9D9D9",
                                            "borderStyle": "solid",
                                            "borderTopWidth": 0.5,
                                          },
                                          Object {
                                            "paddingBottom": 10,
                                            "paddingTop": 10,
                                          },
                                          Object {
                                            "borderTopWidth": 0,
                                          },
                                          undefined,
                                        ]
                                      }
                                      underlayColor="#ECECEC"
                                    >
                                      <View
                                        accessible={true}
                                        focusable={true}
                                        onClick={[Function]}
                                        onResponderGrant={[Function]}
                                        onResponderMove={[Function]}
                                        onResponderRelease={[Function]}
                                        onResponderTerminate={[Function]}
                                        onResponderTerminationRequest={[Function]}
                                        onStartShouldSetResponder={[Function]}
                                        style={
                                          Array [
                                            Object {
                                              "borderColor": "#D9D9D9",
                                              "borderStyle": "solid",
                                              "borderTopWidth": 0.5,
                                            },
                                            Object {
                                              "paddingBottom": 10,
                                              "paddingTop": 10,
                                            },
                                            Object {
                                              "borderTopWidth": 0,
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <View
                                          accessible={true}
                                          focusable={true}
                                          onClick={[Function]}
                                          onResponderGrant={[Function]}
                                          onResponderMove={[Function]}
                                          onResponderRelease={[Function]}
                                          onResponderTerminate={[Function]}
                                          onResponderTerminationRequest={[Function]}
                                          onStartShouldSetResponder={[Function]}
                                          style={
                                            Array [
                                              Object {
                                                "borderColor": "#D9D9D9",
                                                "borderStyle": "solid",
                                                "borderTopWidth": 0.5,
                                              },
                                              Object {
                                                "paddingBottom": 10,
                                                "paddingTop": 10,
                                              },
                                              Object {
                                                "borderTopWidth": 0,
                                              },
                                              undefined,
                                            ]
                                          }
                                        >
                                          <Text
                                            style={
                                              Array [
                                                Object {
                                                  "fontSize": 18,
                                                  "marginBottom": 5.4,
                                                  "marginTop": 5.4,
                                                  "textAlign": "center",
                                                },
                                                Object {
                                                  "color": "#000",
                                                },
                                                Object {
                                                  "color": "#000000",
                                                },
                                              ]
                                            }
                                          >
                                            <Text
                                              style={
                                                Array [
                                                  Object {
                                                    "fontSize": 18,
                                                    "marginBottom": 5.4,
                                                    "marginTop": 5.4,
                                                    "textAlign": "center",
                                                  },
                                                  Object {
                                                    "color": "#000",
                                                  },
                                                  Object {
                                                    "color": "#000000",
                                                  },
                                                ]
                                              }
                                            >
                                              选项一
                                            </Text>
                                          </Text>
                                          <PressabilityDebugView
                                            color="green"
                                          />
                                        </View>
                                      </View>
                                    </TouchableHighlight>
                                  </ForwardRef>
                                  <ForwardRef
                                    key="1"
                                    onPress={[MockFunction]}
                                    style={
                                      Array [
                                        Object {
                                          "borderColor": "#D9D9D9",
                                          "borderStyle": "solid",
                                          "borderTopWidth": 0.5,
                                        },
                                        Object {
                                          "paddingBottom": 10,
                                          "paddingTop": 10,
                                        },
                                        Object {},
                                        undefined,
                                      ]
                                    }
                                    underlayColor="#ECECEC"
                                  >
                                    <TouchableHighlight
                                      hostRef={null}
                                      onPress={[MockFunction]}
                                      style={
                                        Array [
                                          Object {
                                            "borderColor": "#D9D9D9",
                                            "borderStyle": "solid",
                                            "borderTopWidth": 0.5,
                                          },
                                          Object {
                                            "paddingBottom": 10,
                                            "paddingTop": 10,
                                          },
                                          Object {},
                                          undefined,
                                        ]
                                      }
                                      underlayColor="#ECECEC"
                                    >
                                      <View
                                        accessible={true}
                                        focusable={true}
                                        onClick={[Function]}
                                        onResponderGrant={[Function]}
                                        onResponderMove={[Function]}
                                        onResponderRelease={[Function]}
                                        onResponderTerminate={[Function]}
                                        onResponderTerminationRequest={[Function]}
                                        onStartShouldSetResponder={[Function]}
                                        style={
                                          Array [
                                            Object {
                                              "borderColor": "#D9D9D9",
                                              "borderStyle": "solid",
                                              "borderTopWidth": 0.5,
                                            },
                                            Object {
                                              "paddingBottom": 10,
                                              "paddingTop": 10,
                                            },
                                            Object {},
                                            undefined,
                                          ]
                                        }
                                      >
                                        <View
                                          accessible={true}
                                          focusable={true}
                                          onClick={[Function]}
                                          onResponderGrant={[Function]}
                                          onResponderMove={[Function]}
                                          onResponderRelease={[Function]}
                                          onResponderTerminate={[Function]}
                                          onResponderTerminationRequest={[Function]}
                                          onStartShouldSetResponder={[Function]}
                                          style={
                                            Array [
                                              Object {
                                                "borderColor": "#D9D9D9",
                                                "borderStyle": "solid",
                                                "borderTopWidth": 0.5,
                                              },
                                              Object {
                                                "paddingBottom": 10,
                                                "paddingTop": 10,
                                              },
                                              Object {},
                                              undefined,
                                            ]
                                          }
                                        >
                                          <Text
                                            style={
                                              Array [
                                                Object {
                                                  "fontSize": 18,
                                                  "marginBottom": 5.4,
                                                  "marginTop": 5.4,
                                                  "textAlign": "center",
                                                },
                                                Object {
                                                  "color": "#000",
                                                },
                                                Object {
                                                  "color": "#000000",
                                                },
                                              ]
                                            }
                                          >
                                            <Text
                                              style={
                                                Array [
                                                  Object {
                                                    "fontSize": 18,
                                                    "marginBottom": 5.4,
                                                    "marginTop": 5.4,
                                                    "textAlign": "center",
                                                  },
                                                  Object {
                                                    "color": "#000",
                                                  },
                                                  Object {
                                                    "color": "#000000",
                                                  },
                                                ]
                                              }
                                            >
                                              选项二
                                            </Text>
                                          </Text>
                                          <PressabilityDebugView
                                            color="green"
                                          />
                                        </View>
                                      </View>
                                    </TouchableHighlight>
                                  </ForwardRef>
                                </View>
                              </View>
                              <View
                                style={
                                  Array [
                                    Object {
                                      "backgroundColor": "#fff",
                                      "marginTop": 6,
                                    },
                                  ]
                                }
                              >
                                <View
                                  style={
                                    Array [
                                      Object {
                                        "backgroundColor": "#fff",
                                        "marginTop": 6,
                                      },
                                    ]
                                  }
                                >
                                  <ForwardRef
                                    key="0"
                                    onPress={[MockFunction]}
                                    style={
                                      Array [
                                        Object {
                                          "borderColor": "#D9D9D9",
                                          "borderStyle": "solid",
                                          "borderTopWidth": 0.5,
                                        },
                                        Object {
                                          "paddingBottom": 10,
                                          "paddingTop": 10,
                                        },
                                        Object {
                                          "borderTopWidth": 0,
                                        },
                                        undefined,
                                      ]
                                    }
                                    underlayColor="#ECECEC"
                                  >
                                    <TouchableHighlight
                                      hostRef={null}
                                      onPress={[MockFunction]}
                                      style={
                                        Array [
                                          Object {
                                            "borderColor": "#D9D9D9",
                                            "borderStyle": "solid",
                                            "borderTopWidth": 0.5,
                                          },
                                          Object {
                                            "paddingBottom": 10,
                                            "paddingTop": 10,
                                          },
                                          Object {
                                            "borderTopWidth": 0,
                                          },
                                          undefined,
                                        ]
                                      }
                                      underlayColor="#ECECEC"
                                    >
                                      <View
                                        accessible={true}
                                        focusable={true}
                                        onClick={[Function]}
                                        onResponderGrant={[Function]}
                                        onResponderMove={[Function]}
                                        onResponderRelease={[Function]}
                                        onResponderTerminate={[Function]}
                                        onResponderTerminationRequest={[Function]}
                                        onStartShouldSetResponder={[Function]}
                                        style={
                                          Array [
                                            Object {
                                              "borderColor": "#D9D9D9",
                                              "borderStyle": "solid",
                                              "borderTopWidth": 0.5,
                                            },
                                            Object {
                                              "paddingBottom": 10,
                                              "paddingTop": 10,
                                            },
                                            Object {
                                              "borderTopWidth": 0,
                                            },
                                            undefined,
                                          ]
                                        }
                                      >
                                        <View
                                          accessible={true}
                                          focusable={true}
                                          onClick={[Function]}
                                          onResponderGrant={[Function]}
                                          onResponderMove={[Function]}
                                          onResponderRelease={[Function]}
                                          onResponderTerminate={[Function]}
                                          onResponderTerminationRequest={[Function]}
                                          onStartShouldSetResponder={[Function]}
                                          style={
                                            Array [
                                              Object {
                                                "borderColor": "#D9D9D9",
                                                "borderStyle": "solid",
                                                "borderTopWidth": 0.5,
                                              },
                                              Object {
                                                "paddingBottom": 10,
                                                "paddingTop": 10,
                                              },
                                              Object {
                                                "borderTopWidth": 0,
                                              },
                                              undefined,
                                            ]
                                          }
                                        >
                                          <Text
                                            style={
                                              Array [
                                                Object {
                                                  "fontSize": 18,
                                                  "marginBottom": 5.4,
                                                  "marginTop": 5.4,
                                                  "textAlign": "center",
                                                },
                                                Object {
                                                  "color": "#000",
                                                },
                                                Object {
                                                  "color": "#000000",
                                                },
                                              ]
                                            }
                                          >
                                            <Text
                                              style={
                                                Array [
                                                  Object {
                                                    "fontSize": 18,
                                                    "marginBottom": 5.4,
                                                    "marginTop": 5.4,
                                                    "textAlign": "center",
                                                  },
                                                  Object {
                                                    "color": "#000",
                                                  },
                                                  Object {
                                                    "color": "#000000",
                                                  },
                                                ]
                                              }
                                            >
                                              取消
                                            </Text>
                                          </Text>
                                          <PressabilityDebugView
                                            color="green"
                                          />
                                        </View>
                                      </View>
                                    </TouchableHighlight>
                                  </ForwardRef>
                                </View>
                              </View>
                              <View
                                style={
                                  Object {
                                    "backgroundColor": "#fff",
                                    "paddingBottom": 16,
                                  }
                                }
                              >
                                <View
                                  style={
                                    Object {
                                      "backgroundColor": "#fff",
                                      "paddingBottom": 16,
                                    }
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </AnimatedComponent>
                  </ForwardRef(AnimatedComponentWrapper)>
                </TouchableWithoutFeedback>
                <PressabilityDebugView
                  color="red"
                />
              </View>
            </View>
          </TouchableWithoutFeedback>
        </Mask>
      </Modal>
    </Component>
  </Popup>
</Index>
`;

exports[`interactive showModal should render Dialog success 1`] = `
<Index
  autoDectect={true}
  buttons={
    Array [
      Object {
        "label": "取消",
        "onPress": [MockFunction],
        "type": "#000000",
      },
      Object {
        "label": "确定",
        "onPress": [MockFunction],
        "type": "#3CC51F",
      },
    ]
  }
  onClose={[MockFunction]}
  title="title"
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "display": "flex",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          Object {
            "display": "flex",
          },
        ]
      }
    >
      <Mask
        onPress={[MockFunction]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <TouchableWithoutFeedback
          onPress={[MockFunction]}
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Array [
                Object {
                  "flex": 1,
                  "zIndex": 1000,
                },
                Object {
                  "backgroundColor": "rgba(0,0,0,.6)",
                },
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  undefined,
                ],
              ]
            }
          >
            <View
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "flex": 1,
                    "zIndex": 1000,
                  },
                  Object {
                    "backgroundColor": "rgba(0,0,0,.6)",
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    undefined,
                  ],
                ]
              }
            >
              <TouchableWithoutFeedback>
                <View
                  accessible={true}
                  focusable={false}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#FFFFFF",
                        "borderRadius": 3,
                        "overflow": "hidden",
                        "width": 690,
                      },
                      undefined,
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={false}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#FFFFFF",
                          "borderRadius": 3,
                          "overflow": "hidden",
                          "width": 690,
                        },
                        undefined,
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "paddingBottom": 8,
                            "paddingLeft": 25.6,
                            "paddingRight": 25.6,
                            "paddingTop": 20.8,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "paddingBottom": 8,
                              "paddingLeft": 25.6,
                              "paddingRight": 25.6,
                              "paddingTop": 20.8,
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontWeight": "400",
                              },
                              Object {
                                "fontSize": 18,
                                "textAlign": "center",
                              },
                              undefined,
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "fontWeight": "400",
                                },
                                Object {
                                  "fontSize": 18,
                                  "textAlign": "center",
                                },
                                undefined,
                              ]
                            }
                          >
                            title
                          </Text>
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "paddingLeft": 25.6,
                            "paddingRight": 25.6,
                          },
                          Object {
                            "paddingBottom": 32,
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "paddingLeft": 25.6,
                              "paddingRight": 25.6,
                            },
                            Object {
                              "paddingBottom": 32,
                            },
                            undefined,
                          ]
                        }
                      >
                        <Text
                          key=".0"
                          style={
                            Array [
                              Object {
                                "color": "#999999",
                                "lineHeight": 19.5,
                              },
                              Object {
                                "fontSize": 15,
                                "textAlign": "center",
                              },
                              undefined,
                              undefined,
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "color": "#999999",
                                  "lineHeight": 19.5,
                                },
                                Object {
                                  "fontSize": 15,
                                  "textAlign": "center",
                                },
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            Test
                          </Text>
                        </Text>
                      </View>
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "flexDirection": "row",
                          },
                          Object {
                            "alignItems": "center",
                            "borderColor": "#D5D5D6",
                            "borderStyle": "solid",
                            "borderTopWidth": 0.5,
                            "height": 48,
                            "justifyContent": "center",
                          },
                          undefined,
                        ]
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "flexDirection": "row",
                            },
                            Object {
                              "alignItems": "center",
                              "borderColor": "#D5D5D6",
                              "borderStyle": "solid",
                              "borderTopWidth": 0.5,
                              "height": 48,
                              "justifyContent": "center",
                            },
                            undefined,
                          ]
                        }
                      >
                        <ForwardRef
                          key="0"
                          onPress={[MockFunction]}
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "justifyContent": "center",
                              },
                              Object {
                                "flex": 1,
                                "height": 48,
                              },
                              Object {},
                              Object {},
                            ]
                          }
                          underlayColor="#EEEEEE"
                        >
                          <TouchableHighlight
                            hostRef={null}
                            onPress={[MockFunction]}
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "justifyContent": "center",
                                },
                                Object {
                                  "flex": 1,
                                  "height": 48,
                                },
                                Object {},
                                Object {},
                              ]
                            }
                            underlayColor="#EEEEEE"
                          >
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "flex": 1,
                                    "height": 48,
                                  },
                                  Object {},
                                  Object {},
                                ]
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "justifyContent": "center",
                                    },
                                    Object {
                                      "flex": 1,
                                      "height": 48,
                                    },
                                    Object {},
                                    Object {},
                                  ]
                                }
                              >
                                <Text
                                  style={
                                    Array [
                                      Object {
                                        "fontSize": 18,
                                      },
                                      Object {
                                        "color": "#000000",
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    style={
                                      Array [
                                        Object {
                                          "fontSize": 18,
                                        },
                                        Object {
                                          "color": "#000000",
                                        },
                                      ]
                                    }
                                  >
                                    取消
                                  </Text>
                                </Text>
                                <PressabilityDebugView
                                  color="green"
                                />
                              </View>
                            </View>
                          </TouchableHighlight>
                        </ForwardRef>
                        <ForwardRef
                          key="1"
                          onPress={[MockFunction]}
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "justifyContent": "center",
                              },
                              Object {
                                "flex": 1,
                                "height": 48,
                              },
                              Object {
                                "borderColor": "#D5D5D6",
                                "borderLeftWidth": 0.5,
                                "borderStyle": "solid",
                              },
                              Object {},
                            ]
                          }
                          underlayColor="#EEEEEE"
                        >
                          <TouchableHighlight
                            hostRef={null}
                            onPress={[MockFunction]}
                            style={
                              Array [
                                Object {
                                  "alignItems": "center",
                                  "justifyContent": "center",
                                },
                                Object {
                                  "flex": 1,
                                  "height": 48,
                                },
                                Object {
                                  "borderColor": "#D5D5D6",
                                  "borderLeftWidth": 0.5,
                                  "borderStyle": "solid",
                                },
                                Object {},
                              ]
                            }
                            underlayColor="#EEEEEE"
                          >
                            <View
                              accessible={true}
                              focusable={true}
                              onClick={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "justifyContent": "center",
                                  },
                                  Object {
                                    "flex": 1,
                                    "height": 48,
                                  },
                                  Object {
                                    "borderColor": "#D5D5D6",
                                    "borderLeftWidth": 0.5,
                                    "borderStyle": "solid",
                                  },
                                  Object {},
                                ]
                              }
                            >
                              <View
                                accessible={true}
                                focusable={true}
                                onClick={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                                style={
                                  Array [
                                    Object {
                                      "alignItems": "center",
                                      "justifyContent": "center",
                                    },
                                    Object {
                                      "flex": 1,
                                      "height": 48,
                                    },
                                    Object {
                                      "borderColor": "#D5D5D6",
                                      "borderLeftWidth": 0.5,
                                      "borderStyle": "solid",
                                    },
                                    Object {},
                                  ]
                                }
                              >
                                <Text
                                  style={
                                    Array [
                                      Object {
                                        "fontSize": 18,
                                      },
                                      Object {
                                        "color": "#3CC51F",
                                      },
                                    ]
                                  }
                                >
                                  <Text
                                    style={
                                      Array [
                                        Object {
                                          "fontSize": 18,
                                        },
                                        Object {
                                          "color": "#3CC51F",
                                        },
                                      ]
                                    }
                                  >
                                    确定
                                  </Text>
                                </Text>
                                <PressabilityDebugView
                                  color="green"
                                />
                              </View>
                            </View>
                          </TouchableHighlight>
                        </ForwardRef>
                      </View>
                    </View>
                    <PressabilityDebugView
                      color="red"
                    />
                  </View>
                </View>
              </TouchableWithoutFeedback>
              <PressabilityDebugView
                color="red"
              />
            </View>
          </View>
        </TouchableWithoutFeedback>
      </Mask>
    </View>
  </View>
</Index>
`;
